tests/files/success/variable_mutation.sol
let mut x = 1;

print("x: ", x);

x = 2;

print("x after mutation: ", x);

let y = x + 3;

print("y: ", y);
