tests/files/fail/variable_not_found.sol
let x = 3;
let y = a + b;
